--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,17 +8,26 @@
     margin-top: 20px;
 }
 
-.add-inventory {
+.add-inventory, .add-workplace {
     display: none;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: #fff;
+    background-color: #f1f1f1;
     z-index: 9999;
+    overflow-y: auto;
+    padding: 25px;
 }
 
-.add-inventory.active {
+.add-inventory.active, .add-workplace.active {
     display: block;
+}
+
+.close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
 }
