--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
     margin-top: 20px;
 }
 
-.add-inventory, .add-workplace {
+.add-inventory, .add-workplace, .move {
     display: none;
     position: fixed;
     left: 0;
@@ -21,7 +21,7 @@
     padding: 25px;
 }
 
-.add-inventory.active, .add-workplace.active {
+.add-inventory.active, .add-workplace.active, .move.active {
     display: block;
 }
 
