add controller employees

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,3 +41,8 @@
 .pagination .page-item {
     cursor: pointer;
 }
+
+.input-group input[type="submit"].btn {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+}
